--- a/chaxun.html
+++ b/chaxun.html
@@ -14,32 +14,45 @@
     <main>
       <div class="result-container">
         <div class="table-box">
+          
           <table>
             <tr>
               <th>考生编号</th>
-              <th>姓名</th>
-              <th>政治或管理类综合成绩</th>
-              <th>外国语成绩</th>
-              <th>业务课一成绩</th>
-              <th>业务课二成绩</th>
-              <th>总分</th>
-              <th>证件号码</th>
+              <td>10300521192915</td>
             </tr>
             <tr>
-              <td>102993******</td>
-              <td>高*</td>
-              <td>75</td>
-              <td>64</td>
-              <td>139</td>
+              <th>姓名</th>
+              <td>彭海燕</td>
+            </tr>
+            <tr>
+              <th>政治或管理类综合成绩</th>
+              <td>66</td>
+            </tr>
+            <tr>
+              <th>外国语成绩</th>
+              <td>36</td>
+            </tr>
+            <tr>
+              <th>业务课一成绩</th>
               <td>135</td>
-              <td>413</td>
-              <td>******</td>
+            </tr>
+            <tr>
+              <th>业务课二成绩</th>
+              <td>148</td>
+            </tr>
+            <tr>
+              <th>总分</th>
+              <td>385</td>
+            </tr>
+            <tr>
+              <th>证件号码</th>
+              <td>510923200202271127</td>
             </tr>
           </table>
 
           <div class="verification-code">
             <p>
-              防伪码：813ffcd80650f6b4bf192f1879b3a6ca7213686d736a28620874d078ca370ac0a8860fd3bfe22aea4823f5d7893a37ab
+              防伪码：<span style="font-weight: 100;">813ffcd80650f6b4bf192f1879b3a6ca7213686d736a28620874d078ca370ac0a8860fd3bfe22aea4823f5d7893a37ab</span>
             </p>
           </div>
 
